# risc0-rust-starter

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: prover_add.rs  prover_mul.rs  prover_pw.rs  prover_sig.rs  verifier_add.rs  verifier_mul.rs  verifier_pw.rs  verifier_sig.rs
common/: Cargo.toml
common/src/: lib.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
